# persian-ocr

./: pyproject.toml  requirements.txt  setup.py
persian_ocr/: __init__.py  __main__.py
persian_ocr/pdf/: classes.py
src/persian_ocr/: __init__.py  core.py
src/persian_ocr/pdf/: classes.py
