[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persian-ocr"
version = "0.1.0"
description = "PDF/Img to text tool for PDF/Img files those contains Persian contents"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Mostafa Motahari", email = "mostafamotahari2004@gmail.com" }]
dependencies = ["seleniumbase>=4.38.0"]
keywords = ["OCR", "Persian", "PDF", "image to text", "selenium"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/MostafaMotahari/persian-ocr"
Repository = "https://github.com/MostafaMotahari/persian-ocr"

[tool.setuptools.packages.find]
where = ["."]
